# etl_server_cloudberry

./: .dockerignore  .git-push-test  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  etl-server-cloudberry.example.toml  etl-server-cloudberry.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  lib.rs  routes.rs  state.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/tests/: standalone_process_e2e.rs
crates/config/: Cargo.toml
crates/config/src/: bootstrap.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: change.rs  error.rs  id.rs  lib.rs  lsn.rs  mapping.rs  pipeline.rs  schema.rs  schema_diff.rs
crates/engine/: Cargo.toml
crates/engine/src/: batch.rs  canonical_copy.rs  completion.rs  lib.rs  normalize.rs  pipeline.rs  reconcile.rs  schema_transition.rs  supervisor.rs  telemetry.rs
crates/engine/src/adapters/: cloudberry.rs  mod.rs  pgoutput.rs
crates/engine/src/runtime/: connection.rs  job.rs  mod.rs  planning.rs  reconciler.rs  reconciliation.rs  settings.rs
crates/engine/tests/: phase1_recovery_e2e.rs  schema_transition_e2e.rs  snapshot_e2e.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: crypto.rs  lib.rs  migration.rs  model.rs  store.rs
crates/metadata/tests/: control_store_pg18.rs
crates/source-postgres/: Cargo.toml
crates/source-postgres/src/: catalog.rs  citus.rs  connection.rs  ddl.rs  error.rs  lib.rs  publication.rs  reconciliation_boundary.rs  snapshot.rs  snapshot_slot.rs  spool.rs  sql.rs  wal.rs
crates/source-postgres/tests/: citus14_pg18.rs  postgres18.rs  reconciliation_boundary_pg18.rs  reconciliation_copy_pg18.rs  snapshot_copy_pg18.rs  snapshot_page_pg18.rs  snapshot_slot_pg18.rs
crates/target-cloudberry/: Cargo.toml
crates/target-cloudberry/src/: apply.rs  checkpoint.rs  chunk.rs  copy.rs  lib.rs  managed.rs  migration.rs  reconciliation.rs  reconciliation_reader.rs  schema.rs  schema_event.rs  snapshot.rs  sql.rs  storage.rs  table_transition.rs  version.rs
crates/target-cloudberry/src/snapshot/: activation.rs  cleanup.rs  manifest.rs  progress.rs
crates/target-cloudberry/tests/: chunk_ledger_cloudberry21.rs  cloudberry21.rs  reconciliation_cloudberry21.rs  reconciliation_reader_cloudberry21.rs  schema_event_cloudberry21.rs
deploy/standalone/: .env.example  Caddyfile  alerts.yml  compose.yaml  control-db-backup.sh  etl-server-cloudberry.toml  prometheus.yml  rollback-drill.sh
deploy/standalone/secrets/: admin_password_hash.example  control_database_url.example  control_db_password.example  master_key.example
docs/: EXECUTION_PLAN.md  HANDOFF.md  PHASE0_COMPLETE.md  PHASE0_PROGRESS.md  PHASE1_PROGRESS.md  analytics-value-benchmark.md  architecture.md  cloudberry-storage-profile.md  delivery-plan.md  duckdb-lake-format-benchmark.md  next-steps.md  phase2-ddl-tight-follow-adr.md  production-standalone.md  reconciliation.md  source-contract.md  standalone-benchmark.md
docs/adr/: 0001-delivery-semantics.md  0002-control-and-metadata.md  0003-citus-cdc.md  0004-streaming-spool-and-completion.md  0005-online-schema-evolution.md
tests/benchmark/: README.md  analytical-queries.sql  analytical-views.sql  cloudberry-vs-postgres.sh  duckdb-iceberg-vs-ducklake.py  setup-cloudberry.sql  setup-postgres.sql
tests/integration/: README.md  docker-compose.yml  standalone-soak-gate.sh
tests/integration/citus/: README.md  compose.yaml  verify.ps1  verify.sh
tests/integration/citus/init/coordinator/: 001-cluster.sql
tests/integration/citus/init/worker/: 001-worker.sql
tests/integration/cloudberry/: build-local-image.sh  container-entrypoint.sh  init-singlenode.sh  init.sql
tests/integration/pg18/: init.sql
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  App.vue  app.css  main.ts  vite-env.d.ts
web/src/api/: index.ts
web/src/components/: AppShell.vue
web/src/lib/: api.test.ts  api.ts  connection.test.ts  connection.ts  format.test.ts  format.ts  navigation.ts  types.ts
web/src/lib/components/: AppShell.svelte  ConfirmAction.svelte  EmptyState.svelte  InlineNotice.svelte  Modal.svelte  PipelineDialog.svelte  SourceDialog.svelte  StatusBadge.svelte  TargetDialog.svelte
web/src/lib/views/: Login.svelte  Operations.svelte  Overview.svelte  Pipelines.svelte  Sources.svelte  Targets.svelte
web/src/router/: index.ts
web/src/stores/: auth.ts
web/src/types/: index.ts
web/src/views/: Login.vue  Operations.vue  Overview.vue  Pipelines.vue  Sources.vue  Targets.vue
