[package]
name = "cloudberry-etl-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
base64.workspace = true
chrono.workspace = true
cloudberry-etl-config.workspace = true
cloudberry-etl-core.workspace = true
cloudberry-etl-engine.workspace = true
cloudberry-etl-metadata.workspace = true
http.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
