[package]
name = "cloudberry-etl-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
cloudberry-etl-core.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true

