[package]
name = "cloudberry-etl-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
cloudberry-etl-core.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
uuid.workspace = true
zeroize.workspace = true

[lints]
workspace = true
