[package]
name = "cloudberry-etl-source-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bincode.workspace = true
bytes.workspace = true
crc32fast.workspace = true
chrono.workspace = true
cloudberry-etl-core.workspace = true
futures.workspace = true
fs2.workspace = true
native-tls.workspace = true
postgres-replication.workspace = true
replication-postgres.workspace = true
replication-postgres-native-tls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
